# Learn-Robotics-Programming-3rd-edition

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  default_branch_roadmap.md  find_pi.bat  inventory-1.py  inventory.py  mdns.bat  motor-timing.md  pyproject.toml
bokeh_tests/: bokeh_button_menu.py  bokeh_columns.py  bokeh_joystick.py  bokeh_styles.py  bokeh_widgets.py  line.py  live_mesh.py  mesh.py
code_diagrams/: pyproject.toml
code_diagrams/chapter-10/complete/chapter-8/logarithms_vs_raw_data/: pyproject.toml
code_diagrams/chapter-12/: banana-shaped.ipynb  probability-distributions_starting-point.ipynb
code_diagrams/chapter-15/: chapter-15-canny.ipynb  chapter-15-exploring.ipynb  chapter-15-lines.ipynb
code_diagrams/chapter-16/complete/chapter-8/: vl53l5cx-data-response.ipynb
code_diagrams/chapter-17/: diagrams.ipynb  rotations.tex
code_diagrams/chapter-17/1-probability-fields/: pyproject.toml
code_diagrams/chapter-17/pose-tracking-test/chapter-12/: probability-distributions.ipynb
code_diagrams/chapter-17/reboot-on-config-change/chapter-8/logarithms_vs_raw_data/: distance_measurement_pipeline.ipynb
code_diagrams/chapter-17/starting-point/chapter-9/: chapter_9_inverse_distance_curve.ipynb
code_diagrams/chapter-8/: log_measurements.ipynb
code_diagrams/chapter-9/: chapter_9_inverse_distance_curve_cross-merge.ipynb
debug_data/: after_speed_change.jsonl  data3.jsonl  data4.jsonl  data5.jsonl  data6.jsonl  data7.jsonl  extract_json.py  mqtt_log.jsonl  mqtt_log_reencoded.jsonl
deploy/: base_packages.py  behavior_path.j2  configure_pi.py  deploy_ai.py  deploy_all.py  deploy_bno055.py  deploy_camera.py  deploy_distance_sensor.py  deploy_inventor_hat_mini.py  deploy_mqtt.py  deploy_services.py  deploy_speaking.py  deploy_speech_recognition.py  deploy_web_server.py  inventor_hat_mini.j2  inventor_hat_service.j2  launcher_service.j2  nginx.conf  nginx.conf.j2  service_template.j2  update_code.py  update_code_rsync.py  virtual_env.py
diagrams/: inverse_distance_curve.ipynb
experiments/: boundary_probabilities.ipynb  distance_probabilities.ipynb  line-detection-contours.ipynb
journal/: 2026-02-26-improvements-deployment.md  2026-02-26-localisation.md  2026-03-02-motion-journal.md  real-world-localisation.md
local_tools/: graph_from_json.ipynb  jsonl_mqtt_logger.py  link_env_json.py  mqtt_latency_measure.py  pose_analysis_service.py  pyproject.toml  stop_i2c_services.py
local_tools/pose_analysis/: mqtt_run_logger.py  mqtt_run_summary.py  pose_analysis_service.md  pose_analysis_service.py
local_tools/simulation/: Dockerfile  README.md  __init__.py  arena_simulation.py  docker-compose.yml  experiment_start_poses.json  ideas.md  main.py  pyproject.toml  real-world-localisation.md  render_templates.py  robot.py  simulated_vl53l5cx.py  simulation.py  start_simulation.sh  validate_start_poses.py
local_tools/smoke_tests/: README.md  smoke_inventor_hat_service.py  smoke_poses_and_boundary.py
local_tools/web_control/: Dockerfile  app.py
robot/: bang_bang_obstacle_avoider.py  bang_bang_obstacle_avoiding.py  behavior_line.py  behavior_path.py  behavior_proportional_avoiding.py  behavior_simple_obstacle_avoiding.py  behavior_smooth_obstacle_avoiding.py  boundary_observation_model.py  camera_view.py  closed_loop_motor.py  distance_plotter.py  distance_sensor_service.py  drive_known_distance.py  drive_known_distance_1_basic.py  drive_known_distance_basic.py  drive_straight_line.py  encoder_drive_line.py  encoder_driver.py  encoder_plotter.py  face_detector.py  face_direction.py  fixed_distance_avoider.py  hello.py  image_server.py  imu_service.py  (+14 more)
simulation/: Dockerfile  README.md  __main__.py  arena_renderer.py  arena_simulation.py  docker-compose.yml  internal.Dockerfile  launcher_service_supervisor.py  main.py  mosquitto.conf  mqtt-monitor.sh  pyproject.toml  render_templates.py  robot.py  simulated_vl53l5cx.py  simulation  start_simulation.sh  status_panel.py  supervisord.conf  window_setup.py
(+452 files in other folders)
