[tool.poetry]
name = "learnrob3"
version = "0.1.0"
description = ""
authors = ["Danny Staple <danny@orionrobots.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyinfra = "^3.0"
numpy = "^2.1.3"
pre-commit = "^4.0.1"
ujson = "^5.10.0"
shapely = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
