[tool.poetry]
name = "learnrob3"
version = "0.1.0"
description = ""
authors = ["Danny Staple <danny@orionrobots.co.uk>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyinfra = "^3.0"
numpy = "^2.1.3"
pre-commit = "^4.0.1"
ujson = "^5.12.0"
shapely = "^2.1.0"
notebook = "^7.4.4"
matplotlib = "^3.10.3"
opencv-python-headless = "^4.12.0.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "paho-mqtt (>=2.1.0,<3.0.0)"
]
