[project]
name = "code-diagrams"
version = "0.1.0"
description = "Shared Python environment for all robotics code diagrams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "opencv-python-headless>=4.11.0.86",
]
